          Release Notes for NEdit Version 5.6, October 2008


$Id: ReleaseNotes,v 1.63.2.3 2008/11/05 09:17:20 lebert Exp $

This file contains last minute notes to users about the release, which are not
included in the documentation or README files included with the distribution
kits.  It also contains change information, for users who are interested in
what bugs have been fixed, and what features have been added in the current
version.

If you are upgrading NEdit from a version prior to 5.0, please see the notes in
the README file which came with the (source or executable) distribution kit,
about updating macros and font settings in your .nedit file.

New Features in 5.6

  - The macro variable $VERSION returns NEdit's version number.

  - The new macro function filename_dialog() can be used to query a file
    name from the user by using the usual file selection dialog.


Bugs fixed in 5.6

  - Fix for SF bug #2222159: File was not reload when type was changed
    externaly

  - Fix for SF bug #2149312: parse error with zero menu entries.

  - Force a terminating \n on macro file load time, to prevent syntax errors
    with statements on the last line. (util/fileUtils.c:ReadMacroFile())
    (SF bug #2038921)

  - Fix multiple memory leaks in interpret.c:PromoteToGlobal()
    (SF bug #1894726)

  - Fix for SF bug #1908890: window title not updated.

  - Fix for SF bug #1730611: $match_syntax_based is not set.

  - Crash on window close when a "File modified externally" dialog was up
    (SF bug #1578869).

  - Crashes and artifacts when using ARGB visuals (SF bugs #1579544, 
    #1030467, #1030192, and #1458006).

  - The text insertion cursor does no longer blink while typing
    (SF bug #906878).

  - The status bar reflects a changed keybinding in the shell command banner.

  - There is now a pattern for highlighting nested command substitution in
    shell scripts (SF patch #1010742).

  - Duplicate display bugs SF#464967 and SF#1041077 are fixed.
